--- a/Multi-TCG-Deckbuilder/App.xaml
+++ b/Multi-TCG-Deckbuilder/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Multi_TCG_Deckbuilder"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoadPlugin.xaml">
     <Application.Resources>
          
     </Application.Resources>
